Add run button on device page
Signed-off-by: Kostiantyn Kostiuk <kostyanf14@live.com>

--- a/app/web/www/commands/index.html
+++ b/app/web/www/commands/index.html
@@ -32,7 +32,7 @@
                             <select class="ui fluid dropdown" name="device_id" required>
                                 <option value=""></option>
                                 {% for dev in devices %}
-                                    <option value="{{dev.id}}">{{dev.name}}</option>
+                                    <option {{ 'selected' if device_id == dev.id }} value="{{dev.id}}">{{dev.name}}</option>
                                 {% endfor %}
                             </select>
                         </div>
