Remove extra condition in HTML
Co-authored-by: Just Me <just806me@gmail.com>

--- a/app/web/www/commands/index.html
+++ b/app/web/www/commands/index.html
@@ -38,7 +38,7 @@
                         </div>
                         <div class="field">
                             <label>Параметри</label>
-                            <textarea rows="2" name="run_options">{{ run_options if run_options != ""}}</textarea>
+                            <textarea rows="2" name="run_options">{{ run_options }}</textarea>
                         </div>
                         <div class="ui fluid buttons">
                             <button class="ui primary button" type="submit">Запустити</button>
